# click-multi-cli-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
cookiecutter_click_multi_cli/: loader.py  utils.py
cookiecutter_click_multi_cli/commands/cookiecutter_click_multi_cli/: hello_world.py
tests/: conftest.py  test_cli.py
